Thu Feb 27 09:55:11 2003  George Lebl <jirka@5z.com>

	* src/graphing.c: make graph window a dialog, allow
	  stopping/interrupting of the graph, run the event loop often.

	* src/gnome-genius.c: don't allow executing code while somehting
	  else is running (for manual, answer copying and such)

Thu Feb 27 08:01:41 2003  George Lebl <jirka@5z.com>

	* src/graphing.c: allow graphing more then one function and fix
	  an error with too high function values.

Wed Feb 26 14:19:23 2003  George Lebl <jirka@5z.com>

	* src/graphing.c: plot every 2 pixels and optimize things a bit

Wed Feb 26 13:53:38 2003  George Lebl <jirka@5z.com>

	* src/mpwrap.[ch]: add ability to get doubles

	* src/graphing.[ch], src/gnome-genius.c, src/Makefile.am:  Add
	  very very rudimentary graphing support with the LinePlot function.
	  Doesn't make nice graphs but should be enough for
	  "seeing how f : R -> R" looks.

Wed Feb 26 10:06:11 2003  George Lebl <jirka@5z.com>

	* src/genius.c, src/gnome-genius.c: Add Copy Answer As
	  Plain/LaTeX/MathML/Troff menu items (to make the gui version at
	  least somewhat more useful then the console version) and add
	  a default answer to avoid errors on copy before anything has been
	  entered.

	* doc/manual.txt: update to add the mathml mode

Wed Feb 26 09:27:24 2003  George Lebl <jirka@5z.com>

	* src/calc.c: improve a teeeny bit on the mathml mode.  Produces
	  Content MathML but I can't get mozilla to render mathml for me
	  properly so I can't test this.

Tue Feb 25 10:27:47 2003  George Lebl <jirka@5z.com>

	* src/genius.c, src/gnome-genius.c, src/calc.[ch], src/funclib.c:
	  Add an experimental MathML output mode (for matrices only for now).
	  Can't quite get it to work though.

Mon Feb 24 15:58:47 2003  George Lebl <jirka@5z.com>

	* src/mpwrap.c: add locale.h

	* src/gnome-genius.c: allow quitting while calculations are running
	  and add a "really want to quit dialog" to be replaced by "really