@@ -1,3 +1,9 @@
+Thu Feb 27 10:17:08 2003  George Lebl <jirka@5z.com>
+
+	* src/gnome-genius.c, src/graphing.c, src/inter.c: graph progressively
+	  to show how far we got.  Fix a long standing bug with getting an
+	  unusable prompt if interrupt is hit without anything running.
+
 Thu Feb 27 09:55:11 2003  George Lebl <jirka@5z.com>
 
 	* src/graphing.c: make graph window a dialog, allow
